[gd_scene load_steps=7 format=3 uid="uid://cew8kfnq88grv"]

[ext_resource type="FontVariation" uid="uid://boig078mia03n" path="res://Resources/Pixel_font_variation.tres" id="1_vg3qy"]
[ext_resource type="Script" path="res://Scripts/menu.gd" id="1_vtg1x"]
[ext_resource type="Theme" uid="uid://k4rwyxdv4fr1" path="res://Resources/Defult_theme.tres" id="2_2qoj4"]
[ext_resource type="Texture2D" uid="uid://dx2gb0saj6yyo" path="res://Assets/Ships/Score_display.png" id="3_mnq73"]
[ext_resource type="Texture2D" uid="uid://c2v2n8ahxf136" path="res://Assets/Ships/Ship1.png" id="4_lpnui"]
[ext_resource type="Texture2D" uid="uid://8f2eur3yw52j" path="res://Assets/Ships/Ship2.png" id="5_5mcec"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vtg1x")

[node name="Title" type="Label" parent="."]
layout_mode = 0
offset_top = 29.0
offset_right = 1152.0
offset_bottom = 176.0
theme_override_fonts/font = ExtResource("1_vg3qy")
theme_override_font_sizes/font_size = 75
text = "1v1 Starship Duel"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Scores" type="Label" parent="."]
layout_mode = 0
offset_left = 662.4
offset_top = 200.0
offset_right = 1036.8
offset_bottom = 318.0
theme_override_fonts/font = ExtResource("1_vg3qy")
theme_override_font_sizes/font_size = 40
text = "Scores"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 115.0
offset_top = 200.0
offset_right = 489.4
offset_bottom = 565.4
theme_override_constants/separation = 5

[node name="StartButton" type="Button" parent="VBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_2qoj4")
text = "Start/Play"

[node name="ResetButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_2qoj4")
text = "Reset Scores"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_2qoj4")
text = "Quit"

[node name="Auto" type="Label" parent="."]
layout_mode = 0
offset_left = 632.4
offset_top = 446.0
offset_right = 1006.8
offset_bottom = 564.0
theme_override_fonts/font = ExtResource("1_vg3qy")
theme_override_font_sizes/font_size = 40
text = "Auto Play"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CheckButton" type="CheckButton" parent="."]
layout_mode = 0
offset_left = 711.0
offset_top = 475.0
offset_right = 849.0
offset_bottom = 505.0
scale = Vector2(2, 2)
theme = ExtResource("2_2qoj4")

[node name="Score_display" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ScoreDisplay2" type="Sprite2D" parent="Score_display"]
self_modulate = Color(0.00784314, 0.207843, 0.317647, 1)
position = Vector2(955.8, 382)
scale = Vector2(5.5, 5.5)
texture = ExtResource("3_mnq73")

[node name="Ship2_display" type="Sprite2D" parent="Score_display"]
position = Vector2(980, 388)
rotation = 0.436332
scale = Vector2(3, 3)
texture = ExtResource("4_lpnui")

[node name="Score2" type="Label" parent="Score_display"]
layout_mode = 0
offset_left = 909.0
offset_top = 363.0
offset_right = 949.0
offset_bottom = 403.0
theme = ExtResource("2_2qoj4")
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreDisplay1" type="Sprite2D" parent="Score_display"]
self_modulate = Color(0.00784314, 0.207843, 0.317647, 1)
position = Vector2(772.2, 382)
scale = Vector2(5.5, 5.5)
texture = ExtResource("3_mnq73")

[node name="Ship1_display" type="Sprite2D" parent="Score_display"]
position = Vector2(797, 387.788)
rotation = 0.436332
scale = Vector2(3, 3)
texture = ExtResource("5_5mcec")

[node name="Score1" type="Label" parent="Score_display"]
layout_mode = 0
offset_left = 725.0
offset_top = 362.789
offset_right = 765.0
offset_bottom = 402.789
theme = ExtResource("2_2qoj4")
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ResetButton" to="." method="_on_reset_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="toggled" from="CheckButton" to="." method="_on_check_button_toggled"]
